--- a/Shos.ClipboardSample/Shos.ClipboardSample.vcxproj
+++ b/Shos.ClipboardSample/Shos.ClipboardSample.vcxproj
@@ -184,6 +184,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Document.h" />
+    <ClInclude Include="Figure.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MainFrame.h" />
     <ClInclude Include="pch.h" />
@@ -194,6 +195,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Document.cpp" />
+    <ClCompile Include="Figure.cpp" />
     <ClCompile Include="MainFrame.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
