--- a/Shos.ClipboardSample/Shos.ClipboardSample.vcxproj
+++ b/Shos.ClipboardSample/Shos.ClipboardSample.vcxproj
@@ -183,6 +183,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ClipboardHelper.h" />
     <ClInclude Include="Document.h" />
     <ClInclude Include="Figure.h" />
     <ClInclude Include="framework.h" />
