--- a/Shos.ClipboardSample/Shos.ClipboardSample.vcxproj.filters
+++ b/Shos.ClipboardSample/Shos.ClipboardSample.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Figure.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="ClipboardHelper.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp">
