--- a/Shos.ClipboardSample/Shos.ClipboardSample.vcxproj.filters
+++ b/Shos.ClipboardSample/Shos.ClipboardSample.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClCompile Include="Figure.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="ClipboardHelper.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="ShosClipboardSample.rc">
