--- a/Shos.ClipboardSample/Shos.ClipboardSample.vcxproj.filters
+++ b/Shos.ClipboardSample/Shos.ClipboardSample.vcxproj.filters
@@ -48,6 +48,15 @@
     <ClInclude Include="GdiObjectSelector.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Command.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Observer.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Model.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp">
@@ -69,6 +78,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="ClipboardHelper.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Command.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
