--- a/Shos.ClipboardSample/Shos.ClipboardSample.vcxproj.filters
+++ b/Shos.ClipboardSample/Shos.ClipboardSample.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="Model.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Geometry.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp">
